# omnibooker-v2

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
applications/backend/: Dockerfile  pyproject.toml
applications/backend/src/omnibooker_backend/: __init__.py  __main__.py  config.py  crud.py  database.py  main.py  models.py  schemas.py  security.py
applications/backend/src/omnibooker_backend/integrations/better/: __init__.py  client.py  models.py  utils.py
applications/backend/src/omnibooker_backend/integrations/clubspark/: __init__.py  client.py  models.py  utils.py
applications/backend/src/omnibooker_backend/integrations/stripe/: __init__.py  client.py  models.py
applications/backend/src/omnibooker_backend/routers/: __init__.py  auth.py  booking_slots.py  booking_tasks.py  providers.py
applications/backend/src/omnibooker_backend/services/: booking_engine.py  executor.py  scheduler.py
applications/backend/src/omnibooker_backend/services/providers/: __init__.py  better.py  clubspark.py
applications/backend/tests/: conftest.py  test_better_provider.py  test_booking_slots.py  test_clubspark_provider.py  test_executor.py  test_health.py  test_scheduler.py  test_security.py
applications/frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
applications/frontend/src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
applications/worker/: pyproject.toml
applications/worker/src/omnibooker_worker/: __init__.py  __main__.py  config.py  worker.py
(+25 files in other folders)
