[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omnibooker-worker"
version = "0.1.0"
description = "Background worker and schedulers for Omnibooker"
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy>=2.0.29",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "httpx>=0.27.0"
]

